css/cart.css
.site {
  min-height: 150dvh;
  display: grid;
  grid-template-rows: auto 1fr auto;
  grid-template-columns: minmax(0, 1fr);
}

.cart-grid {
  display: grid;
  grid-template-columns: repeat(4, minmax(18.5%, 1fr));
  grid-gap: 1rem;
}

.book-img {
  width: 100%;
}

main h3 {
  margin-top: 7vh;
  justify-self: center;
}

/* media query 1 - (max-width: 867px) CART GRID */

@media screen and (max-width: 867px) {
  .cart-grid {
    display: grid;
    grid-template-columns: repeat(3, minmax(18.5%, 1fr));
    grid-gap: 1rem;
  }
}

/* media query 2 - max-width: 550px CART GRID */
@media screen and (max-width: 550px) {
  .cart-grid {
    display: flex;
    flex-direction: column;
  }
  main h2 {
    font-size: 20px;
  }
}

